@@ -1,4 +1,5 @@
 6.31_01
+    - WriteEmptyMakefile() is now exportable upon request.
     - Set binmode() when writing to files in Command.t for operating
       systems which need that sort of thing.  [bleadperl #29578]
     - miniperl no longer has the Win32 functions.
